v3/lab/04-istio-gateway-api/httproute.yaml
# 04-istio-gateway-api/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: nginx-demo
spec:
  parentRefs:
    - name: demo-gateway
      namespace: nginx-demo
      sectionName: http
  hostnames:
    - "myapp.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: echoserver
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httpbin
          port: 80
